--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.4",
+    "express-handlebars": "^3.0.0",
     "lodash": "^4.17.4"
   },
   "devDependencies": {
